# FEMU_MultiStream

femu-scripts/: run-blackbox.sh
hw/femu/: femu.c  meson.build  nvme-admin.c  nvme-io.c  nvme.h
hw/femu/backend/: dram.c
hw/femu/bbssd/: bb.c  ftl.c  ftl.h
hw/femu/bbssd/multi-stream/: entropy.c  entropy.h  kmeans.c  kmeans.h  stream.c  stream.h
hw/femu/midas/: bb.c  ftl.c  ftl.h  hot.c  hot.h  midas.c  midas.h  model.c  model.h  queue.c  queue.h  redblack.c  redblack.h
include/qemu/: log.h
util/: log.c
