softmmu_ss.add(when: 'CONFIG_FEMU_PCI', if_true: files('dma.c', 'intr.c', 'nvme-util.c', 'nvme-admin.c', 'nvme-io.c', 'femu.c', 'nossd/nop.c', 'nand/nand.c', 'timing-model/timing.c', 'ocssd/oc12.c', 'ocssd/oc20.c', 'zns/zns.c', 'bbssd/multi-stream/entropy.c', 'bbssd/multi-stream/kmeans.c', 'bbssd/multi-stream/stream.c', 'bbssd/bb.c', 'bbssd/ftl.c', 'midas/ftl.c', 'midas/bb.c', 'midas/midas.c', 'midas/model.c', 'midas/hot.c', 'midas/queue.c', 'midas/redblack.c', 'lib/pqueue.c', 'lib/rte_ring.c', 'backend/dram.c'))
